WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263382
[WebGPU] stencilAttachmentPixelFormat is never set on the MTLDepthStencilDescriptor
https://bugs.webkit.org/show_bug.cgi?id=263382
Summary
[WebGPU] stencilAttachmentPixelFormat is never set on the MTLDepthStencilDesc...
Mike Wyrzykowski
Reported
2023-10-19 10:26:00 PDT
[WebGPU] stencilAttachmentPixelFormat is never set on the MTLDepthStencilDescriptor
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-19 10:26:15 PDT
<
rdar://problem/117213772
>
Mike Wyrzykowski
Comment 2
2023-10-19 10:42:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19285
EWS
Comment 3
2023-10-19 21:35:24 PDT
Committed
269556@main
(ac19d2a124a3): <
https://commits.webkit.org/269556@main
> Reviewed commits have been landed. Closing PR #19285 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug