[WebGPU] stencilAttachmentPixelFormat is never set on the MTLDepthStencilDescriptor https://bugs.webkit.org/show_bug.cgi?id=263382 <radar://117213772>

Reviewed by Dan Glastonbury.

Need to set MTLDepthStencilDescriptor.stencilAttachmentPixelFormat for writes
to the stencil buffer to function.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::Device::isStencilOnlyFormat):
(WebGPU::CommandEncoder::beginRenderPass):
(WebGPU::isStencilOnlyFormat): Deleted.
* Source/WebGPU/WebGPU/Device.h:
* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

Canonical link: https://commits.webkit.org/269556@main